force-app/main/default/objects/Application__c/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName>
    <label>Withdrawal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received another job</fullName>
            </value>
            <value>
                <fullName>Job was not what they expected</fullName>
            </value>
            <value>
                <fullName>Job does not suit them</fullName>
            </value>
            <value>
                <fullName>Could not commit time to prepare for interview</fullName>
            </value>
            <value>
                <fullName>Could not commit to minimum availability</fullName>
            </value>
            <value>
                <fullName>Could not commit to travel</fullName>
            </value>
            <value>
                <fullName>Could not commit to training</fullName>
            </value>
            <value>
                <fullName>Not currently hiring / No available positions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>