force-app/main/default/objects/Application__c/validationRules/BusinessUnit_required.validationRule-meta.xml
<ValidationRule>
    <fullName>BusinessUnit_required</fullName>
    <active>true</active>
    <description>Business Unit is required</description>
    <errorConditionFormula>ISBLANK(TEXT( Business_Unit__c ))</errorConditionFormula>
    <errorDisplayField>Business_Unit__c</errorDisplayField>
    <errorMessage>Please populate the Business Unit of the application.</errorMessage>
</ValidationRule>